# Fitness-application

./: .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml
app_config/: env_config.py
config/: env_config.py
core/: ApiErrorHandler.py
database/: db_connection.py
middlewares/: global_error_handler.py
models/: refresh_token_schema.py  user_schema.py
routes/: auth_routes.py
services/: auth_services.py
validators/: auth_validator.py
